--- a/index.html
+++ b/index.html
@@ -16,19 +16,22 @@
         <h1></h1>
         <p></p>
         <!-- fine titolo -->
-
+        <ul></ul>
 
         <!-- inizio card -->
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+        <div class="card-container">
+            <div class="card mb-3" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="" style="max-width: 100px" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">nome cognome</h5>
+                            <p class="card-text">ruolo</p>
+                            <p class="card-text">email</p>
+
+                        </div>
                     </div>
                 </div>
             </div>
