feat: creazione card membri in pagina

--- a/index.html
+++ b/index.html
@@ -13,28 +13,13 @@
 <body>
     <div class="container">
         <!-- titolo -->
-        <h1></h1>
-        <p></p>
+        <h1>Our Team</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit voluptatum omnis sed quae aut eveniet, facilis, tenetur possimus unde est aliquam rerum nesciunt delectus debitis ad itaque pariatur aperiam nisi!</p>
         <!-- fine titolo -->
         <ul></ul>
 
         <!-- inizio card -->
-        <div class="card-container">
-            <div class="card mb-3" style="max-width: 500px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="" style="max-width: 100px" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">nome cognome</h5>
-                            <p class="card-text">ruolo</p>
-                            <p class="card-text">email</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="card-container">     
         </div>
         <!-- fine card -->
 
