--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
     <div class="container">
         <!-- titolo -->
-        <h1>Our Team</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit voluptatum omnis sed quae aut eveniet, facilis, tenetur possimus unde est aliquam rerum nesciunt delectus debitis ad itaque pariatur aperiam nisi!</p>
+        <h1 class="my-3 text-white text-center display-3 bg-warning rounded d-inlineblock"><em>Our Team</em></h1>
+        <p class="text-center"><strong>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit voluptatum omnis
+                sed quae aut eveniet, facilis, tenetur possimus unde est aliquam rerum nesciunt delectus debitis ad
+                itaque pariatur aperiam nisi!</strong></p>
         <!-- fine titolo -->
-        <ul></ul>
 
         <!-- inizio card -->
-        <div class="card-container">     
-        </div>
+
+            <div id="card-container" class="row row-cols-1 row-cols-md-3">
+            </div>
+
         <!-- fine card -->
 
     </div>
@@ -29,3 +32,4 @@
 </body>
 
 </html>
+
